--- a/public/404.html
+++ b/public/404.html
@@ -19,8 +19,9 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>  <img src="../assets/uhoh.png"></br>
+    We've misplaced you, </br>or something has gone astray. </h1>
+    <p>Think something is broken? <a href="http://signup.prepared.ly/contact">Let us know.</a></p>
   </div>
 </body>
 </html>
