--- a/public/422.html
+++ b/public/422.html
@@ -19,7 +19,8 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
+    <h1>  <img src="../assets/uhoh.png"></br>
+    The change you wanted was rejected.</h1>
     <p>Maybe you tried to change something you didn't have access to.</p>
   </div>
 </body>
