--- a/public/500.html
+++ b/public/500.html
@@ -19,7 +19,9 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>  <img src="../assets/uhoh.png"></br>
+    We've misplaced you, </br>or something has gone astray. </h1>
+    <p>Think something is broken? <a href="http://signup.prepared.ly/contact">Let us know.</a></p>
   </div>
 </body>
 </html>
