--- a/public/500.html
+++ b/public/500.html
@@ -21,7 +21,7 @@
   <div class="dialog">
     <h1>  <img src="../assets/uhoh.png"></br>
     We've misplaced you, </br>or something has gone astray. </h1>
-    <p>Think something is broken? <a href="http://signup.prepared.ly/contact">Let us know.</a></p>
+    <p>Think something is broken? <a href="http://www.prepared.ly/contact">Let us know.</a></p>
   </div>
 </body>
 </html>
