add a link to home on 404 page

--- a/public/404.html
+++ b/public/404.html
@@ -20,7 +20,8 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <h1>  <img src="../assets/uhoh.png"></br>
-    We've misplaced you, </br>or something has gone astray. </h1>
+    We've misplaced you, </br> there's no page here, </br>or something has gone astray. </h1>
+    <h1><a href="http://prepared.ly">Please go back to the home page.</a></h1>
     <p>Think something is broken? <a href="http://www.prepared.ly/contact">Let us know.</a></p>
   </div>
 </body>
